// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`azure-app-onboard - Trigger Tests Trigger Keywords Snapshot skill description triggers match snapshot 1`] = `
{
  "description": "End-to-end orchestrator: from business idea, app idea, or app from a GitHub repo to running Azure deployment with cost estimates and pre-deploy approval. Analyzes your app, auto-detects the right Azure services, scaffolds code, and deploys. Handles moving existing apps to Azure without rewriting or with minimal changes, including apps with non-Azure cloud SDK dependencies (AWS/GCP) via inline SDK swaps. WHEN: I want to build an app, bring your app to Azure, plan my app, what will this cost, from idea to production, no code yet, help me get started, starter project, cost to run, is my code ready to deploy, deploy my app to the cloud, deploy all my services, what Azure services do I need, plan my Azure deployment, deploy my new app to Azure, what services for my app, can you deploy my app, one-click deploy, migrate my app to Azure. DO NOT USE FOR: running azd up (use azure-deploy), optimizing existing costs (use azure-cost), code readiness checks only (use azure-app-onboard-prereq).",
  "extractedKeywords": [
    "aks",
    "analyzes",
    "app",
    "approval",
    "apps",
    "auto-detects",
    "azure",
    "azure-app-onboard-prereq",
    "azure-cost",
    "azure-deploy",
    "bicep",
    "bring",
    "build",
    "business",
    "changes",
    "checks",
    "cli",
    "cloud",
    "code",
    "cost",
    "costs",
    "dependencies",
    "deploy",
    "deployment",
    "deploys",
    "diagnostic",
    "end-to-end",
    "estimates",
    "existing",
    "from",
    "github",
    "handles",
    "help",
    "idea",
    "identity",
    "including",
    "inline",
    "kubernetes",
    "mcp",
    "migrate",
    "minimal",
    "moving",
    "need",
    "non-azure",
    "onboard",
    "one-click",
    "only",
    "optimizing",
    "orchestrator",
    "plan",
    "pre-deploy",
    "production",
    "project",
    "rbac",
    "readiness",
    "ready",
    "repo",
    "rewriting",
    "right",
    "running",
    "scaffolds",
    "security",
    "services",
    "started",
    "starter",
    "swaps",
    "terraform",
    "this",
    "validation",
    "want",
    "what",
    "when",
    "will",
    "with",
    "without",
    "your",
  ],
  "name": "azure-app-onboard",
}
`;

exports[`azure-app-onboard - Trigger Tests Trigger Keywords Snapshot skill keywords match snapshot 1`] = `
[
  "aks",
  "analyzes",
  "app",
  "approval",
  "apps",
  "auto-detects",
  "azure",
  "azure-app-onboard-prereq",
  "azure-cost",
  "azure-deploy",
  "bicep",
  "bring",
  "build",
  "business",
  "changes",
  "checks",
  "cli",
  "cloud",
  "code",
  "cost",
  "costs",
  "dependencies",
  "deploy",
  "deployment",
  "deploys",
  "diagnostic",
  "end-to-end",
  "estimates",
  "existing",
  "from",
  "github",
  "handles",
  "help",
  "idea",
  "identity",
  "including",
  "inline",
  "kubernetes",
  "mcp",
  "migrate",
  "minimal",
  "moving",
  "need",
  "non-azure",
  "onboard",
  "one-click",
  "only",
  "optimizing",
  "orchestrator",
  "plan",
  "pre-deploy",
  "production",
  "project",
  "rbac",
  "readiness",
  "ready",
  "repo",
  "rewriting",
  "right",
  "running",
  "scaffolds",
  "security",
  "services",
  "started",
  "starter",
  "swaps",
  "terraform",
  "this",
  "validation",
  "want",
  "what",
  "when",
  "will",
  "with",
  "without",
  "your",
]
`;
